# py-ubicatech

./: .pre-commit-config.yaml  LICENSE  README.md  example.env  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/workflows/: ci_check.yml
alembic/: alembic.ini  env.py
alembic/versions/: 1_init.py  f3ea16a50cdf_autogen.py
bot/: README.md  cli.py  example.env  pyproject.toml
bot/src/: components.py  config.py
bot/src/models/: routes.py  schemas.py
bot/src/tools/: __init__.py  migrate_helper.py  routing_helper.py
migrations/alembic/: alembic.ini  env.py
migrations/alembic/versions/: 71c59bb1f132_autogen.py
migrations/atlas/: atlas.hcl
migrations/atlas/sql/: 01_schemas.sql
src/: __init__.py  config.py  database.py
src/app/: __init__.py  database.py  models.py  permissions.py  routes.py
src/app/services/: account_management_services.py
src/app/static/js/: login.js  register.js  settings.js
src/app/templates/: admin.html
src/app/utils/: custom_errors.py  error_utils.py  sanitization.py  validators.py
src/app/views/: account_management_views.py  static_views.py
src/models/: cpu.py
src/routes/: __init__.py  cpu.py
tests/: confTest.py  conftest.py  test_account_management_views.py  test_main.py
