[project]
name = "py-ubicatech"
version = "0.1.0"
description = "Python API based on Flask and SQLAlchemy"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.15.1",
    "bcrypt>=4.3.0",
    "bleach>=6.2.0",
    "colorama>=0.4.6",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "gunicorn>=23.0.0",
    "logging>=0.4.9.6",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.39",
]

[dependency-groups]
dev = [
  "bandit>=1.8.3",
  "pre-commit>=4.2.0",
  "pytest>=8.3.5",
  "ruff>=0.11.2",
  "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
start = "python -m gunicorn -b 0.0.0.0:8080 'src.app:create_app()'"
dev = "python src/__init__.py"
githooks = "pre-commit install -t pre-commit -t pre-push -t commit-msg"
db = "alembic -c alembic/alembic.ini -x db=dev"
db-upgrade = "task db -- upgrade head"
db-downgrade = "task db -- downgrade -1"
db-revision = "task db -- revision -m 'auto' --autogenerate --rev-id=r_$(date '+%Y%m%d%H%M%S')"
format = "python -m ruff format --check ./src ./tests ./alembic"
format-fix = "python -m ruff format ./src ./tests ./alembic"
lint = "python -m ruff check ./src ./tests ./alembic"
lint-fix = "python -m ruff check --fix ./src ./tests ./alembic"
sec-lint = "python -m bandit -r ./src"
check = "task format && task lint && task sec-lint"
fix = "task format-fix && task lint-fix"
test = "python -m pytest -v ./tests"
test-db = "alembic -c alembic/alembic.ini -x db=test"
test-db-upgrade = "task test-db -- upgrade head"

[tool.pytest.ini_options]
addopts = "-vvv"
testpaths = "tests"

[tool.ruff]
extend-exclude = [
  "__pycache__",
  "build",
  "dist",
]
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
extend-select = [
  "C4",
  "D200",
  "D201",
  "D204",
  "D205",
  "D206",
  "D210",
  "D211",
  "D213",
  "D300",
  "D400",
  "D402",
  "D403",
  "D404",
  "D419",
  "E",
  "F",
  "FURB",
  "G010",
  "I",
  "INP001",
  "N805",
  "PERF101",
  "PERF102",
  "PERF401",
  "PERF402",
  "PGH004",
  "PGH005",
  "PIE794",
  "PIE796",
  "PIE807",
  "PIE810",
  "PLR",
  "RET502",
  "RET503",
  "RET504",
  "RET505",
  "RUF015",
  "RUF032",
  "RUF033",
  "RUF034",
  "RUF100",
  "S101",
  "T20",
  "UP",
  "W",
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]
"alembic/*.py" = ["INP001"]
