[project]
name = "py-ubicatech"
version = "0.1.0"
description = "Python API based on Flask and SQLAlchemy"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.15.1",
    "colorama>=0.4.6",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "logging>=0.4.9.6",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.39",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
  "bandit>=1.8.3",
  "pre-commit>=4.2.0",
  "pytest>=8.3.5",
  "pytest-mock>=3.14.0",
  "ruff>=0.11.2",
  "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
start = "python -m gunicorn -b 0.0.0.0:8080 'src:create_app()'"
dev = "python src/__init__.py --debug --host 0.0.0.0"
githooks = "pre-commit install -t pre-commit -t pre-push -t commit-msg"
db = "alembic -c alembic/alembic.ini"
db-revision = "task db -- revision -m 'autogen' --autogenerate"
db-upgrade = "task db -- upgrade head"
db-downgrade = "task db -- downgrade -1"
format = "python -m ruff format --check ./src ./tests ./bot ./alembic"
format-fix = "python -m ruff format ./src ./tests ./bot ./alembic"
lint = "python -m ruff check ./src ./tests ./bot ./alembic"
lint-fix = "python -m ruff check --fix ./src ./tests ./bot ./alembic"
sec-lint = "python -m bandit -r ./src ./bot"
check = "task format && task lint && task sec-lint"
fix = "task format-fix && task lint-fix"
test = "python -m pytest -v ./tests"

[tool.pytest.ini_options]
addopts = "-vvv"
testpaths = "tests"

[tool.ruff]
extend-exclude = [
  "__pycache__",
  "build",
  "dist",
]
target-version = "py313"
line-length = 100
indent-width = 4
src = ["src", "tests"]

[tool.ruff.lint]
extend-select = [
  "C4",
  "D200",
  "D201",
  "D204",
  "D205",
  "D206",
  "D210",
  "D211",
  "D213",
  "D300",
  "D400",
  "D402",
  "D403",
  "D404",
  "D419",
  "E",
  "F",
  "FURB",
  "G010",
  "I",
  "INP001",
  "N805",
  "PERF101",
  "PERF102",
  "PERF401",
  "PERF402",
  "PGH004",
  "PGH005",
  "PIE794",
  "PIE796",
  "PIE807",
  "PIE810",
  "PLR",
  "RET502",
  "RET503",
  "RET504",
  "RET505",
  "RUF015",
  "RUF032",
  "RUF033",
  "RUF034",
  "RUF100",
  "S101",
  "T20",
  "UP",
  "W",
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]
"alembic/*.py" = ["F403", "D400", "INP001"]
"bot/*.py" = ["INP001"]

[tool.uv.workspace]
members = ["bot"]
